--- a/code/.htaccess
+++ b/code/.htaccess
@@ -1,15 +1,88 @@
+Options FollowSymLinks
+AddDefaultCharset utf-8
+
+<ifmodule mod_rewrite.c>
 RewriteEngine On
 
-# End the processing, if a rewrite already occurred
-RewriteRule ^(frontend|backend)/web/ - [L]
+#RewriteCond %{HTTPS} off
+#RewriteCond %{HTTP:X-Forwarded-Proto} !https
+#RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
-# Handle the case of backend, skip ([S=1]) the following rule, if current matched
-RewriteRule ^backend(/(.*))?$ backend/web/$2 [S=1]
+Redirect /admin /backend
 
-# handle the case of frontend
-RewriteRule .* frontend/web/$0
+# the main rewrite rule for the frontend application
+RewriteCond %{REQUEST_URI} !^/(backend/web|backend)
+RewriteRule !^frontend/web /frontend/web/%{REQUEST_URI} [L]
 
-# Uncomment the following, if you want speaking URL
+# redirect to the page without a trailing slash
+#RewriteCond %{REQUEST_URI} ^/admin/$
+#RewriteRule ^(admin)/ /$1 [L,R=301]
+# the main rewrite rule for the backend application
+RewriteCond %{REQUEST_URI} ^/backend
+RewriteRule ^backend/(.*) /backend/web/$1 [L]
+
+# if a directory or a file of the frontend application exists,
+# use the request directly
+RewriteCond %{REQUEST_URI} ^/frontend/web
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^([^/]+/web)/.*$ $1/index.php
+# otherwise forward the request to index.php
+RewriteRule . /frontend/web/index.php [L]
+
+# if a directory or a file of the backend application exists,
+# use the request directly
+RewriteCond %{REQUEST_URI} ^/backend/web
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+# otherwise forward the request to index.php
+RewriteRule . /backend/web/index.php [L]
+
+RewriteCond %{REQUEST_URI} \.(htaccess|htpasswd|svn|git)
+RewriteRule \.(htaccess|htpasswd|svn|git) - [F]
+</ifmodule>
+
+# 480 weeks
+<FilesMatch "\.(ico|pdf|flv|jpg|jpeg|png|gif|js|css|swf|svg|webmanifest)$">
+Header set Cache-Control "max-age=290304000, public"
+</FilesMatch>
+
+# 2 DAYS
+<FilesMatch "\.(xml|txt)$">
+Header set Cache-Control "max-age=172800, public, must-revalidate"
+</FilesMatch>
+
+# 2 HOURS
+<FilesMatch "\.(html|htm)$">
+Header set Cache-Control "max-age=7200, must-revalidate"
+</FilesMatch>
+
+<IfModule mod_headers.c>
+    # Serve gzip compressed CSS files if they exist
+    # and the client accepts gzip.
+#    RewriteCond "%{HTTPS:Accept-encoding}" "gzip"
+    RewriteCond "%{HTTP:Accept-encoding}" "gzip"
+    RewriteCond "%{REQUEST_FILENAME}\.gz" -s
+    RewriteRule "^(.*)\.css" "$1\.css\.gz" [QSA]
+
+    # Serve gzip compressed JS files if they exist
+    # and the client accepts gzip.
+#    RewriteCond "%{HTTPS:Accept-encoding}" "gzip"
+    RewriteCond "%{HTTP:Accept-encoding}" "gzip"
+    RewriteCond "%{REQUEST_FILENAME}\.gz" -s
+    RewriteRule "^(.*)\.js" "$1\.js\.gz" [QSA]
+
+
+    # Serve correct content types, and prevent mod_deflate double gzip.
+    RewriteRule "\.css\.gz$" "-" [T=text/css,E=no-gzip:1]
+    RewriteRule "\.js\.gz$" "-" [T=text/javascript,E=no-gzip:1]
+
+
+    <FilesMatch "(\.js\.gz|\.css\.gz)$">
+      # Serve correct encoding type.
+      Header append Content-Encoding gzip
+
+      # Force proxies to cache gzipped &
+      # non-gzipped css/js files separately.
+      Header append Vary Accept-Encoding
+    </FilesMatch>
+</IfModule>
